plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'net.neoforged.moddev' version '1.0.21'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.mapping_version
        minecraftVersion = project.minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven {
        name = "ParchmentMC"
        url = "https://maven.parchmentmc.org"
    }
    maven {
        name 'Curios maven'
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        url "https://cursemaven.com/"
    }
    maven {
        url = 'https://maven.blamejared.com/'
    }
    maven {
        url = "https://modmaven.dev/"
    }
    maven {
        url = "https://maven.createmod.net/"
    }
    /*maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }*/
}

dependencies {
    //Create
    implementation "curse.maven:create-328085:7963363"
    implementation("net.createmod.ponder:ponder-neoforge:1.0.82+mc1.21.1")
    compileOnly("dev.engine-room.flywheel:flywheel-neoforge-api-1.21.1:1.0.6")
    runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-1.21.1:1.0.6")
    // JEI
    compileOnly ("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly ("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}")
    runtimeOnly ("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")
    // Ostatní mody z CurseMaven (zůstávají stejné)
    implementation "curse.maven:farmers-delight-398521:8007613"
    implementation "curse.maven:curios-continuation-1037991:5888964"
    runtimeOnly "curse.maven:createaddition-439890:7518252"
    runtimeOnly "curse.maven:slice-and-dice-659674:7738176"
    runtimeOnly "curse.maven:jade-324717:7545219"
    runtimeOnly "curse.maven:mouse-tweaks-60089:5637846"
    runtimeOnly "curse.maven:appleskin-248787:7854442"
    runtimeOnly "curse.maven:pipez-443900:5609056"
    runtimeOnly "curse.maven:crafting-tweaks-233071:8019498"
    runtimeOnly "curse.maven:balm-531761:7420963"
    runtimeOnly "curse.maven:kotlin-for-forge-351264:7471280"
    runtimeOnly "curse.maven:worldedit-225608:5830452"

    //runtimeOnly "maven.modrinth:component-viewer:0.1.2"
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version: neo_version,
            neo_version_range: neo_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml', 'pack.mcmeta']) {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                "Specification-Title"     : mod_id,
                "Specification-Vendor"    : mod_authors,
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : mod_authors,
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
